# seed-rust

./: Cargo.toml  LICENSE  LICENSE-APACHE
.sqlx/: query-1910a209b1912edc5b004e4c6f468f5be35bce493d0bb314e29f55227f745db9.json  query-341a1b702daf2b383c6f31872b56d76fbf4dfd862473535c3af7112d4dd6d218.json  query-8475ca14593111a574e3c3191c8fef6f874da68f7b9eaf3d708b2388b38c33ed.json
infrastructure/: Cargo.toml
infrastructure/src/: database.rs  websocket.rs
main/: Cargo.toml
main/src/: main.rs
misc/: Cargo.toml
misc/src/: base64.rs  lib.rs  tls.rs
protocol/: Cargo.toml
protocol/src/entity/: message.rs  websocket.rs
src/: Cargo.toml  base64.rs  database.rs  lib.rs  main.rs  tls.rs
src/infrastructure/: database.rs  websocket.rs
src/seed/: error.rs  mod.rs  queue.rs  responses.rs
src/seed-legacy/entity/: mod.rs  response.rs
src/seed/entity/: message.rs  response.rs  websocket.rs
src/traits/: message.rs  mod.rs  websocket.rs
src/traits_legacy/: message.rs  websocket.rs
src/use_case/: messages.rs  websocket.rs
traits/: Cargo.toml
traits/src/: message.rs  websocket.rs
use_case/: Cargo.toml
use_case/src/: messages.rs  websocket.rs
