[package]
name = "seed-rust"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
actix-ws = "0.3.0"
reqwest = "0.12.7"
sqlx = { version = "0.8.2", features = [
    "sqlx-postgres",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
anyhow = { version = "1.0.89", features = ["backtrace", "std"] }
base64 = "0.22.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
pretty_env_logger = "0.5.0"
log = { version = "0.4.25", features = ["std"] }
thiserror = "2.0.11"
flume = "0.11.1"
futures = "0.3.31"
uuid = { version = "1.13.1", features = ["v4"] }
actix = "0.13.5"
rustls-pemfile = "2.2.0"
rustls = "0.23"
actix-tls = "3.4.0"
