[package]
name = "seed-rust"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Human9000-bit"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
actix-ws = "0.3.0"
sqlx = { version = "0.8.2", features = [
    "sqlx-postgres",
    "postgres",
    "runtime-tokio",
] }
anyhow = { version = "1.0.89", features = ["backtrace", "std"] }
base64 = "0.22.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
pretty_env_logger = "0.5.0"
log = { version = "0.4.25", features = ["std"] }
thiserror = "2.0.11"
flume = "0.11.1"
futures = "0.3.31"
uuid = { version = "1.13.1", features = ["v4"] }
actix = "0.13.5"
rustls-pemfile = "2.2.0"
rustls = "0.23"
dashmap = { version = "6.1.0", features = ["inline"] }

[lints.clippy]
# Arithmetic
checked_conversions = "deny"
cast_precision_loss = "deny"
integer_division = "deny"
arithmetic_side_effects = "deny"
unchecked_duration_subtraction = "deny"

# Unwraps
unwrap_used = "deny"
expect_used = "deny"
panicking_unwrap = "deny"
option_env_unwrap = "deny"

# Array indexing
indexing_slicing = "deny" # Avoid direct array indexing and use safer methods like .get()

# Path handling
join_absolute_paths = "deny"

# Serialization issues
serde_api_misuse = "deny"

# Unbounded input
uninit_vec = "deny"

# Unsafe code detection
transmute_int_to_char = "deny" # Prevent unsafe transmutation from integers to characters
transmute_int_to_float = "deny" # Prevent unsafe transmutation from integers to floats
transmute_ptr_to_ref = "deny" # Prevent unsafe transmutation from pointers to references
transmute_undefined_repr = "deny" # Detect transmutes with potentially undefined representations
transmute_unnamed_fields = "deny" # Detect transmutes with unnamed fields