[workspace]
members = ["main", "protocol", "traits", "misc", "infrastructure", "use_case"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Human9000-bit"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace.dependencies]
sqlx = { version = "0.8.2", features = [
    "sqlx-postgres",
    "postgres",
    "runtime-tokio",
] }
anyhow = { version = "1.0.89", features = ["backtrace", "std"] }
base64 = "0.22.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
pretty_env_logger = "0.5.0"
log = { version = "0.4.25", features = ["std"] }
thiserror = "2.0.11"
flume = "0.11.1"
futures = "0.3.31"
uuid = { version = "1.13.1", features = ["v4"] }
actix = "0.13.5"
rustls-pemfile = "2.2.0"
rustls = "0.23"
dashmap = { version = "6.1.0", features = ["inline"] }
tokio-tungstenite = "0.26.2"
tokio = {version = "1.45.1", features = ["full"]}
