[package]
name = "seed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "seed-rust"
path = "src/main.rs"

[dependencies]
protocol = { path = "../protocol" }
traits = { path = "../traits" }
infrastructure = { path = "../infrastructure" }
use_case = { path = "../use_case" }
misc = { path = "../misc" }

actix-web.workspace = true
anyhow.workspace = true
pretty_env_logger.workspace = true
log.workspace = true