[package]
name = "protocol"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
serde.workspace = true
dashmap.workspace = true
actix-ws.workspace = true
futures.workspace = true
actix-web.workspace = true
uuid.workspace = true
flume.workspace = true

[dev-dependencies]
serde_json.workspace = true