[package]
name = "protocol"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
serde.workspace = true
dashmap.workspace = true
futures.workspace = true
uuid.workspace = true
flume.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true  

[dev-dependencies]
serde_json.workspace = true