[package]
name = "use_case"
version = "0.1.0"
edition.workspace = true

[dependencies]
protocol = { path = "../protocol" }
traits = { path = "../traits" }
misc = { path = "../misc" }

anyhow.workspace = true
log.workspace = true
flume.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true